Small code cleanup.

--- a/r-inla.org/doc/prior/rho1.tex
+++ b/r-inla.org/doc/prior/rho1.tex
@@ -19,7 +19,7 @@ where
 \end{displaymath}
 and
 \begin{displaymath}
-    J(\rho) = \frac{1}{2\sqrt{1-\rho}}
+    J(\rho) = \frac{1}{2\mu(\rho)}
 \end{displaymath}
 The parameter $\lambda$ is defined through
 \begin{displaymath}
