--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -10,6 +10,7 @@ rm INLA*tar.gz INLA*tgz INLA*zip
 bdate=$(date -d @$epoch +%Y%m%d%H%M)
 date=$(date -d @$epoch)
 D=inla/rinla/R
+DD=INLA/rinla/R
 
 hg=$(cd $D >/dev/null 2>/dev/null; hg parents --template 'hgid: {node|short}  date: {date|date}')
 ##inlahg=$(extern/inla64.linux -V 2>&1 | grep hgid:|head -n1)
@@ -59,7 +60,11 @@ cat $D/version.R | \
          /^[ \t]*bdate *=/{      print "    bdate      = ", "inla.trim(\"" bdate   "\")"; next;}
          /^[ \t]*version *=/{      print "    version      = ", "inla.trim(\"" version   "\")"; next;}
 	 {print}' hg="$hg" inlahg="$inlahg" bdate="$bdate" date="$date" version="$VERSION" > $tt
-mv -f $tt $D/version.R
+mv -f $tt $DD/version.R
+
+##echo "bdate: $bdate"
+##cat $D/version.R
+##exit
 
 ( cd $D; ./make-man-pages; )
 
