Integrate the pc-prior for the bym2:phi parameter.

--- a/r-inla.org/doc/hyper/latent/bym2.tex
+++ b/r-inla.org/doc/hyper/latent/bym2.tex
@@ -16,8 +16,8 @@
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
-	 	 	\item[name] logit rho
-	 	 	\item[short.name] rho
+	 	 	\item[name] logit phi
+	 	 	\item[short.name] phi
 	 	 	\item[prior] gaussian
 	 	 	\item[param] 0 0.45
 	 	 	\item[initial] -3
