Made the pc-priors default for model bym2.

--- a/r-inla.org/doc/hyper/latent/bym2.tex
+++ b/r-inla.org/doc/hyper/latent/bym2.tex
@@ -7,9 +7,9 @@
 	 	 \begin{description}
 	 	 	\item[name] log precision
 	 	 	\item[short.name] prec
-	 	 	\item[prior] loggamma
-	 	 	\item[param] 1 0.1
-	 	 	\item[initial] 2.30258509299405
+	 	 	\item[prior] pc.prec
+	 	 	\item[param] 1 0.01
+	 	 	\item[initial] 4
 	 	 	\item[fixed] FALSE
 	 	 	\item[to.theta] \verb|function(x) log(x)|
 	 	 	\item[from.theta] \verb|function(x) exp(x)|
@@ -18,8 +18,8 @@
 	 	 \begin{description}
 	 	 	\item[name] logit phi
 	 	 	\item[short.name] phi
-	 	 	\item[prior] gaussian
-	 	 	\item[param] 0 0.45
+	 	 	\item[prior] pc
+	 	 	\item[param] 0.5 -1
 	 	 	\item[initial] -3
 	 	 	\item[fixed] FALSE
 	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
