--- a/r-inla.org/doc/hyper/likelihood/binomial.tex
+++ b/r-inla.org/doc/hyper/likelihood/binomial.tex
@@ -4,6 +4,6 @@
 	\item[hyper]\ 
 	\item[survival] FALSE
 	\item[discrete] TRUE
-	\item[link] default logit probit cloglog log
+	\item[link] default logit probit cloglog log sslogit
 	\item[pdf] binomial
 \end{description}
